fix <mj-include>: previously this led to invalid html when the <mj-include> was the first element in <mj-body>

--- a/tests/testdata/mj-include-body.mjml
+++ b/tests/testdata/mj-include-body.mjml
@@ -1,5 +1,13 @@
 <mjml>
   <mj-body>
-    <mj-include path="./header.mjml" />
+    <mj-include path="./_header.mjml" />
+
+    <mj-section>
+      <mj-column>
+        <mj-text>foo</mj-text>
+      </mj-column>
+    </mj-section>
+
+    <mj-include path="./_footer.mjml" />
   </mj-body>
 </mjml>
