--- a/tests/testdata/css-inlining.mjml
+++ b/tests/testdata/css-inlining.mjml
@@ -1,4 +1,11 @@
 <mjml>
+  <mj-head>
+    <mj-style inline="inline">
+      .box {
+        border: 5px solid red;
+      }
+    </mj-style>
+  </mj-head>
   <mj-body>
     <mj-section>
       <mj-column>
@@ -7,7 +14,7 @@
 
         <mj-divider border-color="#F45E43"></mj-divider>
 
-        <mj-text font-size="20px" color="#F45E43" font-family="helvetica">Hello World</mj-text>
+        <mj-text css-class="box" font-size="20px" color="#F45E43" font-family="helvetica">Hello World</mj-text>
 
       </mj-column>
     </mj-section>
