--- a/tests/testdata/css-inlining.mjml
+++ b/tests/testdata/css-inlining.mjml
@@ -3,18 +3,26 @@
     <mj-style inline="inline">
       .box {
         border: 5px solid red;
+        background-color: blue;
+      }
+      .box > table {
+        border: 10px solid red;
+      }
+      .box > table > tbody > tr > td,
+      .box > table > tbody > tr > td > div {
+        border-radius: 3px;
       }
     </mj-style>
   </mj-head>
   <mj-body>
-    <mj-section>
+    <mj-section css-class="box">
       <mj-column>
 
         <mj-image width="100px" src="/assets/img/logo-small.png"></mj-image>
 
         <mj-divider border-color="#F45E43"></mj-divider>
 
-        <mj-text css-class="box" font-size="20px" color="#F45E43" font-family="helvetica">Hello World</mj-text>
+        <mj-text font-size="20px" color="#F45E43" font-family="helvetica">Hello World</mj-text>
 
       </mj-column>
     </mj-section>
