--- a/tests/testdata/css-inlining.mjml
+++ b/tests/testdata/css-inlining.mjml
@@ -4,6 +4,9 @@
       .box {
         border: 5px solid red;
       }
+      .box > div > span {
+        border: 3px solid blue;
+      }
     </mj-style>
   </mj-head>
   <mj-body>
@@ -14,7 +17,11 @@
 
         <mj-divider border-color="#F45E43"></mj-divider>
 
-        <mj-text css-class="box" font-size="20px" color="#F45E43" font-family="helvetica">Hello World</mj-text>
+        <mj-text css-class="box" font-size="20px" color="#F45E43" font-family="helvetica">
+          <span>
+            &lt; Hello World &gt;
+          </span>
+        </mj-text>
 
       </mj-column>
     </mj-section>
